# kaggle

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: sync.py
stellar_class/: FINDINGS.md
stellar_class/notebooks/: eda.ipynb  kernel-metadata.json  stellar-baseline-autogluon.ipynb  stellar-class-model.ipynb  stellar-realmlp-5seed-tpu.ipynb  stellar-realmlp-hpo-tpu.ipynb  stellar-realmlp-tpu.ipynb  stellar-tabpfn-stacker.ipynb
stellar_class/scripts/: build_baseline_nb.py  build_realmlp_hpo_nb.py  build_realmlp_tpu_nb.py  build_stack_bases.py  build_tabpfn_stacker_nb.py  kaggle_run.sh  run_tabpfn_stacker.sh
stellar_class/src/: blend.py  diversity_screen.py  features.py  hpo_realmlp.py  stack_tabpfn.py  train_autogluon.py  train_automl.py  train_lgb.py  train_realmlp.py  train_tabpfn.py  utils.py  validation.py
