[project]
name = "kaggle-monorepo"
version = "0.1.0"
description = "Monorepo for Kaggle competitions and notebooks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kaggle>=1.6.17",
    "nbformat>=5.10.4",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "polars>=0.20.0",
    "plotly>=5.22.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "lightgbm>=4.6.0",
    "pyarrow>=24.0.0",
]

